[package]
name = "try-blocks"
description = "macro to emulate the upcoming `try` block feature on stable"
version = "0.1.0"
edition = "2021"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>", "JoJoJet <joe102000@gmail.com"]
license = "MIT"
repository = "https://github.com/JoJoJet/try-blocks"
keywords = ["try", "control-flow", "catch", "throw"]

[dependencies]
